@@ -3,6 +3,8 @@
    (finish_header): provide reference to entire list of headers at
    completion of header, so that canonicalizers do not need to store
    their own copy of the header
+ * lib/Mail/DKIM/Canonicalization/DkimCommon.pm: do not store header as
+   parsed, rather only canonicalize header within finish_header()
 
 2010-06-03: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm: prevent abuse- if a message has more than
